force-app/main/default/objects/p2s_base1__CampaignAttribution__c/p2s_base1__CampaignAttribution__c.object-meta.xml
<CustomObject>
    <label>Attribution</label>
    <nameField>
        <displayFormat>CA.{YYYYMMDD}.{00000}</displayFormat>
        <label>Attribution Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attribution</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>