force-app/main/default/objects/p2s_base1__CampaignAttribution__c/fields/Closed_Won_Recurring_Change_FT__c.field-meta.xml
<CustomField>
    <fullName>Closed_Won_Recurring_Change_FT__c</fullName>
    <formula>IF(ISPICKVAL( p2s_base1__CustomerPath__r.p2s_base1__ToLifecycleStage__c , &quot;Closed Won&quot;), Recurring_Change_Amount_FT__c ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Closed Won Recurring Change (FT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>