force-app/main/default/objects/p2s_base1__CampaignAttribution__c/fields/Opp_Created_Recurring_Change_Position__c.field-meta.xml
<CustomField>
    <fullName>Opp_Created_Recurring_Change_Position__c</fullName>
    <formula>IF(ISPICKVAL( p2s_base1__CustomerPath__r.p2s_base1__ToLifecycleStage__c , &quot;Opportunity Created&quot;), Recurring_Change_Amount_Position__c ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opp Created Recurring Change (Position)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>