force-app/main/default/objects/p2s_base1__CampaignAttribution__c/fields/Opportunity_Type__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Type__c</fullName>
    <formula>TEXT(p2s_base1__CustomerPath__r.p2s_base1__Opportunity__r.Type)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity: Type</label>
    <type>Text</type>
</CustomField>