force-app/main/default/objects/p2s_base1__CampaignAttribution__c/fields/p2s_base1__ClosedWonOppsFirstTouch__c.field-meta.xml
<CustomField>
    <fullName>p2s_base1__ClosedWonOppsFirstTouch__c</fullName>
    <formula>IF(ISPICKVAL( p2s_base1__CustomerPath__r.p2s_base1__ToLifecycleStage__c , &quot;Closed Won&quot;), p2s_base1__FirstTouch__c ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Closed Won Opps (FT)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>