force-app/main/default/objects/p2s_base1__CampaignAttribution__c/fields/p2s_base1__Contact__c.field-meta.xml
<CustomField>
    <fullName>p2s_base1__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>CustomerPathCampaign</relationshipName>
    <type>Lookup</type>
</CustomField>