force-app/main/default/objects/p2s_base1__CampaignAttribution__c/fields/p2s_base1__EngagementMinutesWeight__c.field-meta.xml
<CustomField>
    <fullName>p2s_base1__EngagementMinutesWeight__c</fullName>
    <label>Engagement Minutes Weight</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>