force-app/main/default/objects/p2s_base1__CampaignAttribution__c/fields/p2s_base1__EngagioActivity__c.field-meta.xml
<CustomField>
    <fullName>p2s_base1__EngagioActivity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Engagio Activity</label>
    <referenceTo>p2s_base1__EngagioActivity__c</referenceTo>
    <relationshipName>Campaign_Attribution</relationshipName>
    <type>Lookup</type>
</CustomField>