force-app/main/default/objects/p2s_base1__CampaignAttribution__c/fields/p2s_base1__EqualWeightResponded__c.field-meta.xml
<CustomField>
    <fullName>p2s_base1__EqualWeightResponded__c</fullName>
    <description>1 / the number of records for this CustomerPath__c that are responded to a campaign</description>
    <inlineHelpText>1 / the number of records for this CustomerPath__c that are responded to a campaign</inlineHelpText>
    <label>Equal Weight Responded</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>