force-app/main/default/objects/p2s_base1__CampaignAttribution__c/fields/p2s_base1__FirstTouch__c.field-meta.xml
<CustomField>
    <fullName>p2s_base1__FirstTouch__c</fullName>
    <description>This field is set to 1 if the MemberAssociatedDate__c is the earliest for this CustomerPath__c record</description>
    <inlineHelpText>This field is set to 1 if the MemberAssociatedDate__c is the earliest for this CustomerPath__c record</inlineHelpText>
    <label>First Touch</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>