force-app/main/default/objects/p2s_base1__CampaignAttribution__c/fields/p2s_base1__MemberAssociatedDate__c.field-meta.xml
<CustomField>
    <fullName>p2s_base1__MemberAssociatedDate__c</fullName>
    <label>(DEPRECATED) Member Associated Date</label>
    <type>DateTime</type>
</CustomField>