force-app/main/default/objects/p2s_base1__CampaignAttribution__c/fields/p2s_base1__MemberRespondedDate__c.field-meta.xml
<CustomField>
    <fullName>p2s_base1__MemberRespondedDate__c</fullName>
    <label>(DEPRECATED) Member Responded Date</label>
    <type>DateTime</type>
</CustomField>