force-app/main/default/objects/p2s_base1__CampaignAttribution__c/fields/p2s_base1__MemberStatus__c.field-meta.xml
<CustomField>
    <fullName>p2s_base1__MemberStatus__c</fullName>
    <label>(DEPRECATED) Member Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>