force-app/main/default/objects/p2s_base1__CampaignAttribution__c/fields/p2s_base1__MQACountEqual__c.field-meta.xml
<CustomField>
    <fullName>p2s_base1__MQACountEqual__c</fullName>
    <formula>IF(ISPICKVAL(p2s_base1__CustomerPath__r.p2s_base1__ToLifecycleStage__c , &quot;MQA&quot;), p2s_base1__EqualWeight__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MQAs (Equal)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>