force-app/main/default/objects/p2s_base1__CampaignAttribution__c/fields/p2s_base1__Opp_Amount_Minutes__c.field-meta.xml
<CustomField>
    <fullName>p2s_base1__Opp_Amount_Minutes__c</fullName>
    <formula>IF(NOT(ISBLANK(p2s_base1__CustomerPath__r.p2s_base1__ReferenceOpportunity__c )),
p2s_base1__CustomerPath__r.p2s_base1__ReferenceOpportunity__r.Amount *  p2s_base1__EngagementMinutesWeight__c ,
p2s_base1__CustomerPath__r.p2s_base1__Opportunity__r.Amount * p2s_base1__EngagementMinutesWeight__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opp Amount (Minutes)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>