force-app/main/default/objects/p2s_base1__CampaignAttribution__c/fields/p2s_base1__OppAmountFirstTouch__c.field-meta.xml
<CustomField>
    <fullName>p2s_base1__OppAmountFirstTouch__c</fullName>
    <formula>IF((ISBLANK( p2s_base1__CustomerPath__r.p2s_base1__ReferenceOpportunity__c )) , (p2s_base1__CustomerPath__r.p2s_base1__Opportunity__r.Amount * p2s_base1__FirstTouch__c), (p2s_base1__CustomerPath__r.p2s_base1__ReferenceOpportunity__r.Amount * p2s_base1__FirstTouch__c))</formula>
    <label>Opp Amount (FT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>