force-app/main/default/objects/p2s_base1__CampaignAttribution__c/fields/p2s_base1__OppsCreatedLastTouch__c.field-meta.xml
<CustomField>
    <fullName>p2s_base1__OppsCreatedLastTouch__c</fullName>
    <formula>IF(ISPICKVAL( p2s_base1__CustomerPath__r.p2s_base1__ToLifecycleStage__c , &quot;Opportunity Created&quot;), p2s_base1__LastTouch__c ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opps Created (LT)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>