force-app/main/default/objects/p2s_base1__CampaignAttribution__c/fields/p2s_base1__PersonID__c.field-meta.xml
<CustomField>
    <fullName>p2s_base1__PersonID__c</fullName>
    <description>This field represents the unique ID of the person from the Engagio Activities data.  If there is no PersonID, the value of &quot;First Name-Last Name-Title&quot; will be used instead.</description>
    <inlineHelpText>This field represents the unique ID of the person from the Engagio Activities data.  If there is no PersonID, the value of &quot;First Name-Last Name-Title&quot; will be used instead.</inlineHelpText>
    <label>Person ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>