force-app/main/default/objects/p2s_base1__CampaignAttribution__c/fields/p2s_base1__PositionBasedWeight__c.field-meta.xml
<CustomField>
    <fullName>p2s_base1__PositionBasedWeight__c</fullName>
    <description>The percentage allocated to this campaign based upon the position attribution model</description>
    <inlineHelpText>The percentage allocated to this campaign based upon the position attribution model</inlineHelpText>
    <label>Position Based Weight</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>