force-app/main/default/objects/p2s_base1__CampaignAttribution__c/fields/p2s_base1__Scored__c.field-meta.xml
<CustomField>
    <fullName>p2s_base1__Scored__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this field is set to true, the record will not be scored.  If the record is set to false, all records for this CustomerPath will be rescored</description>
    <inlineHelpText>If this field is set to true, the record will not be scored.  If the record is set to false, all records for this CustomerPath will be rescored</inlineHelpText>
    <label>Scored</label>
    <type>Checkbox</type>
</CustomField>