force-app/main/default/objects/p2s_base1__CampaignAttribution__c/fields/p2s_base1__VelMTtoOppCreated__c.field-meta.xml
<CustomField>
    <fullName>p2s_base1__VelMTtoOppCreated__c</fullName>
    <formula>IF(AND(ISPICKVAL(p2s_base1__CustomerPath__r.p2s_base1__ToLifecycleStage__c, &quot;Opportunity Created&quot;),  NOT(ISBLANK(p2s_base1__EqualWeight__c))),  p2s_base1__CustomerPath__r.p2s_base1__TransitionDateTime__c  - p2s_base1__MemberAssociatedDate__c, NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Velocity: MT (Equal) to Opp Created</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>