force-app/main/default/objects/p2s_base1__CampaignAttribution__c/fields/p2s_base1__Velocity_FT_to_Closed_Won_Act__c.field-meta.xml
<CustomField>
    <fullName>p2s_base1__Velocity_FT_to_Closed_Won_Act__c</fullName>
    <formula>IF(AND(ISPICKVAL(p2s_base1__CustomerPath__r.p2s_base1__ToLifecycleStage__c, &quot;Closed Won&quot;), p2s_base1__FirstTouch__c =1), p2s_base1__CustomerPath__r.p2s_base1__TransitionDateTime__c -  p2s_base1__EngagioActivity__r.p2s_base1__Activity_ActivityDate__c , NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Velocity: FT to Closed Won Act</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>