force-app/main/default/objects/p2s_base1__CampaignAttribution__c/fields/p2s_base1__Velocity_FT_to_Opp_Created__c.field-meta.xml
<CustomField>
    <fullName>p2s_base1__Velocity_FT_to_Opp_Created__c</fullName>
    <formula>IF(AND(ISPICKVAL(p2s_base1__CustomerPath__r.p2s_base1__ToLifecycleStage__c, &quot;Opportunity Created&quot;), p2s_base1__FirstTouch__c =1), p2s_base1__CustomerPath__r.p2s_base1__TransitionDateTime__c - p2s_base1__MemberAssociatedDate__c, NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Velocity FT to Opp Created</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>