force-app/main/default/objects/p2s_base1__CampaignAttribution__c/fields/Recurring_Change_Amount_Position__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Change_Amount_Position__c</fullName>
    <formula>p2s_base1__CustomerPath__r.Recurring_Change_Amount__c * p2s_base1__PositionBasedWeight__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recurring Change Amount (Position)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>